12/02/26 - corrección del poyecto según rúbrica

--- a/contacto.html
+++ b/contacto.html
@@ -72,64 +72,68 @@
 </nav>
 
 <main class="section-degradado">
-    <div class="container">
-        <div class="row justify-content-center py-5">
-            <div class="col-md-8">
-                <div class="text-center">
-                    <h1 class="h1 fw-bold resaltado my-4">Contáctanos - PAU a Punto</h1>
-                </div>
 
-                <div class="card border-0 mb-3 rounded-3 shadow">
-                    <div class="card-body fs-5">
-                        <p class="mt-3 mb-5 fw-bold">Puedes enviarnos tus dudas, te las resolveremos en el menor plazo posible.</p>
-                        <form action="mailto:mh92@.isabel@gmail.com" method="POST">
-                            
-                            <div class="mb-3">
-                                <label for="nombre" class="form-label">Nombre *</label>
-                                <input type="text" name="Nombre" class="form-control" required>
-                            </div>
+<!-- SECCIÓN: TELEGRAM -->
+  <section id="telegram" class="pt-5 px-3 px-md-5">
+    <div class="container text-center py-4">
+      <h2 class="resaltado py-3 display-6 fw-bold">¡Únete a nuestro canal de noticias de Telegram!</h2>
+      <h3 class="py-3 fs-5">Recibirás información actualizada sobre las novedades que van publicándose sobre las PAU. ¡Para que no te pierdas ninguna noticia!</h3>
 
-                            <div class="mb-3">
-                                <label for="apellidos" class="form-label">Apellidos</label>
-                                <input type="text" name="Apellidos" class="form-control">
-                            </div>
-
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Correo electrónico *</label>
-                                <input type="email" name="Email" class="form-control" required>
-                            </div>
-
-                            <div class="mb-3">
-                                <label for="mensaje" class="form-label">Mensaje</label>
-                                <textarea name="Mensaje" class="form-control" rows="4" placeholder="Escribe tu duda aquí..."></textarea>
-                            </div>
-
-                            <div class="my-2 text-center">
-                                <button type="submit" class="btn btn-primary rounded-pill fs-4">Enviar mensaje</button>
-                            </div>
-                            <p class="fst-italic fw-lighter text-center">(Se abrirá tu aplicación de correo.)</p>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+      <button id="telegramBtn" type="button" class="btn btn-primary rounded-pill px-4 shadow mt-2 fs-4">
+        Únete a nuestro Telegram
+      </button>
     </div>
+  </section>
 
-      <!-- SECCIÓN: TELEGRAM -->
-    <section id="telegram" class="pb-5 px-3 px-md-5">
-      <div class="container text-center py-4">
-        <h2 class="resaltado py-3 display-6 fw-bold">¡Únete a nuestro canal de noticias de Telegram!</h2>
-        <h3 class="py-3 fs-5">Recibirás información actualizada sobre las novedades que van publicándose sobre las PAU. ¡Para que no te pierdas ninguna noticia!</h3>
+<!-- SECCIÓN: TELEGRAM -->
+  <section id="telegram" class="py-5 px-3 px-md-5">
+    <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-md-8">
+              <div class="text-center">
+                  <h1 class="h1 fw-bold resaltado my-4">O contáctanos mediante el formulario web</h1>
+              </div>
 
-        <button id="telegramBtn" type="button" class="btn btn-primary rounded-pill px-4 shadow mt-2 fs-4">
-          Únete a nuestro Telegram
-        </button>
+              <div class="contacto card border-0 mb-3 rounded-3 shadow">
+                  <div class="card-body fs-5">
+                      <p class="mt-3 mb-5 fw-bold">Puedes enviarnos tus dudas, te las resolveremos en el menor plazo posible.</p>
+                      <form action="mailto:mh92@.isabel@gmail.com" method="POST">
+                          
+                          <div class="mb-3">
+                              <label for="nombre" class="form-label">Nombre *</label>
+                              <input type="text" name="Nombre" class="form-control" required>
+                          </div>
+
+                          <div class="mb-3">
+                              <label for="apellidos" class="form-label">Apellidos</label>
+                              <input type="text" name="Apellidos" class="form-control">
+                          </div>
+
+                          <div class="mb-3">
+                              <label for="email" class="form-label">Correo electrónico *</label>
+                              <input type="email" name="Email" class="form-control" required>
+                          </div>
+
+                          <div class="mb-3">
+                              <label for="mensaje" class="form-label">Mensaje</label>
+                              <textarea name="Mensaje" class="form-control" rows="4" placeholder="Escribe tu duda aquí..."></textarea>
+                          </div>
+
+                          <div class="my-2 text-center">
+                              <button type="submit" class="btn btn-primary rounded-pill fs-4">Enviar mensaje</button>
+                          </div>
+                          <p class="fst-italic fw-lighter text-center">(Se abrirá tu aplicación de correo.)</p>
+                      </form>
+                  </div>
+              </div>
+          </div>
       </div>
-    </section>
+    </div>
+  </section>
 
 </main>
 
-<a href="#hero" class="btn-top back-to-top btn my-5 mx-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
+<a href="contacto.html" class="btn-top back-to-top btn my-5 mx-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
 
 <!-- Footer (ayroui template) -->
 <footer class="bg-primary text-white pt-4">
