--- a/tecnicas.html
+++ b/tecnicas.html
@@ -440,7 +440,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body">
-        <div class="small text-secondary mb-2" id="searchMeta"></div>
+        <div class="small mb-2 fst-italic" id="searchMeta"></div>
         <div class="list-group" id="searchResults"></div>
       </div>
     </div>
