--- a/agenda.html
+++ b/agenda.html
@@ -88,7 +88,7 @@
               <h3 class="pt-3 fw-bold">1. Estructura de las pruebas</h3>
               <h4 class="fw-bold py-3">Fase Obligatoria</h4>
               <p>Te examinas de:</p>
-              <ul>
+              <ol class="fw-bold">
                 <li>
                   <strong>Lengua Castellana y Literatura II</strong>
                 </li>
@@ -110,7 +110,7 @@
                 <li>
                   <strong>Una materia específica obligatoria de modalidad (*)</strong>
                 </li>
-              </ul>
+              </ol>
             </div>
 
             <div>
@@ -257,8 +257,70 @@
     <h2 class="text-center resaltado pt-5 pb-4">Horario PAU 2026</h2>
     <p class="text-center pb-5 fs-5">Puedes revisar a continuación el horario de los exámenes. En caso de <strong>solapamientos</strong>, consulta las especificaciones que se indican en el documento de Conselleria.</p>
 
-    <div class="container pb-5">
-      <img src="img/horario.jpg" class="img-fluid d-none d-md-block" alt="Horario PAU 2026">
+    <!-- Tabla horario PAU -->
+    <div class="container table-responsive pb-5">
+      <div class="mx-auto w-100 w-md-75 w-lg-50">
+        <table class="table table-bordered text-center align-middle small estilos-tabla">
+          <thead>
+            <tr>
+              <th scope="col">Hora</th>
+              <th scope="col">
+                <div class="fw-bold">Martes</div>
+                <div class="small">2 de junio / 30 de junio</div>
+              </th>
+              <th scope="col">
+                <div class="fw-bold">Miércoles</div>
+                <div class="small">3 de junio / 1 de julio</div>
+              </th>
+              <th scope="col">
+                <div class="fw-bold">Jueves</div>
+                <div class="small">4 de junio / 2 de julio</div>
+              </th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <th scope="row">9:30-11:00</th>
+              <td>Lengua Castellana y Literatura II</td>
+              <td>Inglés · Francés · Alemán · Italiano</td>
+              <td>Valenciano: Lengua y Literatura II</td>
+            </tr>
+
+            <tr>
+              <th scope="row">11:45-13:15</th>
+              <td>Hª de la Filosofía</td>
+              <td>Hª de España</td>
+              <td>
+                Dibujo Artístico II · Artes Escénicas II · Análisis Musical II · 
+                Matemáticas II · Matemáticas Aplicadas a las CCSS II · 
+                Latín II · Ciencias Generales
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">15:30-17:00</th>
+              <td>
+                Biología · Empresa y Diseño de Modelos de Negocio · 
+                Tecnología e Ingeniería II · Hª de la Música y de la Danza · 
+                Fundamentos Artísticos
+              </td>
+              <td>
+                Química · Literatura Dramática · Movimientos Culturales y Artísticos · 
+                Geografía · Dibujo Técnico Aplicado a las APyD II
+              </td>
+              <td>(**solapamientos)</td>
+            </tr>
+
+            <tr>
+              <th scope="row">17:45-19:15</th>
+              <td>Física · Hª · Coro y Técnica Vocal II · Diseño</td>
+              <td>Dibujo Técnico II · Griego II · Técnicas de Expresión Gráfico-Plástica · Geología y Ciencias Ambientales</td>
+              <td>(**solapamientos)</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <div class="container">
