--- a/tecnicas.html
+++ b/tecnicas.html
@@ -12,13 +12,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.8/dist/pulse/bootstrap.min.css" rel="stylesheet">
   <link href="css/estilos.css" rel="stylesheet">
 </head>
-<body class="tecn">
+<body id="top" class="tecn">
+<a href="#main" class="visually-hidden-focusable">Saltar al contenido</a>
 
 <!-- BARRA DE NAVEGACIÓN -->
 <nav class="navbar navbar-expand-lg bg-primary sticky-top" data-bs-theme="dark">
   <div class="container-fluid">
     <a class="navbar-brand me-4" href="index.html"> 
-        <img src="img/logo nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
+        <img src="img/logo_nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -65,6 +66,7 @@
       </ul>
 
       <form id="siteSearchForm" class="d-flex">
+        <label for="siteSearchInput" class="visually-hidden">Buscar en la web</label>
         <input id="siteSearchInput" class="form-control me-sm-2" type="search" placeholder="Busca aquí">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Búsqueda</button>
       </form>
@@ -72,7 +74,7 @@
   </div>
 </nav>
 
-<main>
+<main id="main">
   <div class="container-fluid">
     <div class="row">
     
@@ -179,7 +181,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/vAaRM_wV5W8?si=T82KPiUsdlKdX4JP" title="Relajación progresiva de Jacobson" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/vAaRM_wV5W8?si=T82KPiUsdlKdX4JP" title="Relajación progresiva de Jacobson" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -197,7 +199,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/EGO5m_DBzF8?si=6LqqJ0C3Sk_5UClz" title="Respiración profunda" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/EGO5m_DBzF8?si=6LqqJ0C3Sk_5UClz" title="Respiración profunda" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -215,7 +217,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/BdyPzolaYUw?si=cDmEuMt_pwcTzh7S" title="Visualización positiva" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/BdyPzolaYUw?si=cDmEuMt_pwcTzh7S" title="Visualización positiva" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -233,7 +235,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/q6QACUlYjms?si=F_pbjioh-asfdRYO" title="Técnicas de estudio con ChatGTP" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/q6QACUlYjms?si=F_pbjioh-asfdRYO" title="Técnicas de estudio con ChatGTP" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -249,12 +251,12 @@
               <p>Funciona bien porque reduce la “carga mental” de planificar (lo que suele hacer que procrastines) y te obliga a dividir objetivos grandes en tareas pequeñas y concretas. Es ideal para organizar semanas de estudio, preparar exámenes con varios temas y mantener constancia sin improvisar cada día.</p>
 
               <a href="https://www.mymap.ai/es/study-plan-creator" target="_blank" rel="noopener noreferrer"
-                class="btn btn-outline-primary rounded-pill btn-ext-hover px-4">IR A LA WEB</a>
+                class="boton-tecnicas btn btn-outline-primary rounded-pill btn-ext-hover px-4">IR A LA WEB</a>
             </div>
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <img src="img/imagen 3.jpg" alt="" class="img-fluid">
+                <img src="img/imagen_3.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -270,14 +272,14 @@
               <p>Funciona porque convierte “tengo que estudiar muchísimo” en un plan concreto con bloques diarios, lo que mejora la adherencia y reduce la indecisión. Es ideal para semanas previas a exámenes, épocas con muchas entregas y estudiantes que necesitan estructura clara y realista.</p>
 
               <a href="https://scholarly.so/tools/study-schedule-generator" target="_blank" rel="noopener noreferrer"
-                class="btn btn-outline-primary rounded-pill btn-ext-hover px-4">
-                IA A LA WEB
+                class="boton-tecnicas btn btn-outline-primary rounded-pill btn-ext-hover px-4">
+                IR A LA WEB
               </a>
             </div>
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <img src="img/imagen 8.jpg" alt="" class="img-fluid">
+                <img src="img/imagen_8.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -298,7 +300,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/R5z5tiKtTs8?si=479CjuQf-cZOMPb1" title="Versión Completa. Mitos y realidades sobre la alimentación saludable. J.M. Mulet, científico" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/R5z5tiKtTs8?si=479CjuQf-cZOMPb1" title="Versión Completa. Mitos y realidades sobre la alimentación saludable. J.M. Mulet, científico" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -318,7 +320,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/PXvz8zyuob0?si=NvdN0XMk-7upDqTg" title="Los beneficios del ejercicio para tu cerebro. Wendy Suzuki, neurocientífica" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/PXvz8zyuob0?si=NvdN0XMk-7upDqTg" title="Los beneficios del ejercicio para tu cerebro. Wendy Suzuki, neurocientífica" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -338,7 +340,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VZyBJI5V24U?si=Ob-3sOZ8vb1FKSyb" title=" V. Completa. “El sueño es fundamental para la salud física y mental”. Javier Albares, neurofisiólogo " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/VZyBJI5V24U?si=Ob-3sOZ8vb1FKSyb" title=" V. Completa. “El sueño es fundamental para la salud física y mental”. Javier Albares, neurofisiólogo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -358,7 +360,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/QxmpgHkv_jI?si=xd6M10Etx-ahzBOO" title=" Esto Ocurre a tu Cerebro cuando Entras a Redes Sociales (Neurocientífico) " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/QxmpgHkv_jI?si=xd6M10Etx-ahzBOO" title=" Esto Ocurre a tu Cerebro cuando Entras a Redes Sociales (Neurocientífico)" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -369,7 +371,7 @@
   </div>
 </main>
 
-<a href="#pomodoro" class="btn-top back-to-top btn my-5 mx-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
+<a href="#top" class="btn-top back-to-top btn my-5 mx-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
 
 
 <!-- Footer (ayroui template) -->
@@ -380,14 +382,14 @@
       <!-- Marca / descripción -->
       <div class="col-md-4">
         <a class="navbar-brand me-4 pb-3" href="index.html"> 
-          <img src="img/logo nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
+          <img src="img/logo_nav.png" alt="PAU Fácil logo" class="img-fluid" style="height:24px">
         </a>
         <p class="text-white-50 small">Plataforma educativa ficticia para ayudar a estudiantes de la CCVV a preparar la PAU de forma clara y organizada.</p>
       </div>
 
       <!-- Columna 1 -->
       <div class="col-6 col-md-2">
-        <h6 class="fw-semibold mb-3">Recursos</h6>
+        <h3 class="fw-semibold mb-3">Recursos</h3>
         <ul class="list-unstyled">
           <li><a href="index.html#modelos" class="footer-link">Modelos PAU</a></li>
           <li><a href="index.html#calculadora" class="footer-link">Calculadora</a></li>
@@ -397,7 +399,7 @@
 
       <!-- Columna 2 -->
       <div class="col-6 col-md-2">
-        <h6 class="fw-semibold mb-3">Información</h6>
+        <h3 class="fw-semibold mb-3">Información</h3>
         <ul class="list-unstyled">
           <li><a href="#universidades" class="footer-link">Universidades</a></li>
           <li><a href="agenda.html" class="footer-link">Agenda</a></li>
@@ -406,7 +408,7 @@
 
       <!-- Columna 3 -->
       <div class="col-12 col-md-4">
-        <h6 class="fw-semibold mb-3">Aviso</h6>
+        <h3 class="fw-semibold mb-3">Aviso</h3>
         <p class="text-white-50 small mb-0">
           Proyecto ficticio realizado con fines educativos y de portfolio.
           No existe relación institucional con las entidades mencionadas.
@@ -432,11 +434,11 @@
 </footer>
 
 <!-- Modal para resutlados del buscador -->
-<div class="modal fade" id="searchModal" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="searchModal" role="dialog" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Resultados de búsqueda</h5>
+        <h4 class="modal-title" id="searchModalLabel">Resultados de búsqueda</h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body">
